src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Registration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associated_Business_Names__c</fullName>
        <description>Alternative names for the organization.</description>
        <inlineHelpText>Enter alternative names for the organization in this field.</inlineHelpText>
        <label>Associated Organization Names</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy Organization ID for easy data loading and validation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Organization ID for easy data loading and validation.</inlineHelpText>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurment Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tariff Schedules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <label>Congressional District</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_District_formula__c</fullName>
        <formula>IF(State_Code__c &lt;&gt; NULL &amp;&amp;  Congressional_District__c &lt;&gt; NULL , State_Code__c +&apos;-&apos;+ Congressional_District__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is auto populated for US Organizations based on zip code</inlineHelpText>
        <label>Congressional District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <inlineHelpText>This field is auto populated for US Organizations based on zip code</inlineHelpText>
        <label>County (US Only)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_field__c</fullName>
        <description>to catpure duns field numbers</description>
        <label>DUNS field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataPartnerType__c</fullName>
        <label>Data Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Insert_Action__c</fullName>
        <label>DupeBlocker Insert Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Update_Action__c</fullName>
        <label>DupeBlocker Update Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Dupeblocker_Triggering__c</fullName>
        <description>for uploading to trigger dupeblocker.</description>
        <label>For Dupeblocker Triggering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Exported_To__c</fullName>
        <description>list of contries visited</description>
        <label>Has Exported To</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITA_Organization_and_Product_Description__c</fullName>
        <inlineHelpText>ITA’s notes on this company</inlineHelpText>
        <label>ITA Organization and Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Data Admin teams and Sys Admins - check this to eliminate from future reports easily.</inlineHelpText>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industries__c</fullName>
        <description>based on NAICS; changed Field Type from Long Text Area(3000);</description>
        <label>Industries</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Ceramics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Machinery &amp; Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conditioning/Refrigeration Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft/Aircraft Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport/Ground Support Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural/Constr./Engineering SVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio/Visual Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile/Light Truck/Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive Parts/Services Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books/Periodicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Eq. (Non-Computer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Production Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Fishing Eq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Vessel/Eq. (Non-Fisheries)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers/Peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Eq.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Holding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when this record is a Holding organization</inlineHelpText>
        <label>Is Holding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Subsidiary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Subsidiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Industry_Holder__c</fullName>
        <label>Lead Industry Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sector_Holder__c</fullName>
        <label>Lead Sector Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_sector_Holder__c</fullName>
        <label>Lead Sub-sector Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_ITA_Office__c</fullName>
        <label>Local ITA Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>displays the organization it will be merged with.</description>
        <label>Merged Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Verification_Status__c</field>
                <operation>equals</operation>
                <value>Verified</value>
            </filterItems>
            <infoMessage>Only Verified Organizations can accept merged records.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minority_Owned_Indicator__c</fullName>
        <description>Minority-Owned Indicator from D&amp;B</description>
        <formula>TEXT(DandbCompany.MinorityOwned)</formula>
        <label>Minority-Owned Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <description>IF(DandbCompany.PrimaryNaics &gt;0, DandbCompany.PrimaryNaics &amp; &quot;: &quot; &amp;  DandbCompany.PrimaryNaicsDesc &amp; &quot;, &quot; &amp;  DandbCompany.SecondNaics &amp; &quot;: &quot; &amp;  DandbCompany.SecondNaicsDesc &amp; &quot;, &quot; &amp;  DandbCompany.ThirdNaics &amp; &quot;: &quot; &amp;  DandbCompany.ThirdNaicsDesc</description>
        <formula>(IF(NOT(ISBLANK(DandbCompany.PrimaryNaics)) , DandbCompany.PrimaryNaics &amp; &quot;: &quot; &amp;  DandbCompany.PrimaryNaicsDesc,&quot;&quot;) &amp;
IF(NOT(ISBLANK(DandbCompany.SecondNaics)), &quot;, &quot; &amp;  DandbCompany.SecondNaics &amp; &quot;: &quot; &amp;  DandbCompany.SecondNaicsDesc,&quot;&quot;) &amp;
IF(NOT(ISBLANK(DandbCompany.ThirdNaics)), &quot;, &quot; &amp;  DandbCompany.ThirdNaics &amp; &quot;: &quot; &amp;  DandbCompany.ThirdNaicsDesc, &quot;&quot;)
)</formula>
        <inlineHelpText>Displays top 3 NAICS codes with their description for this company.</inlineHelpText>
        <label>NAICS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_18_ID__c</fullName>
        <description>Adds 18 character case safe ID for reporting purposes.</description>
        <formula>Casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_One__c</fullName>
        <description>This field is for the concept of Power of One. It is a field to use for summary counting sub groups and the like.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is for being able to sum on records for reporting. Not shown on page layout.</inlineHelpText>
        <label>Organization One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Office__c</fullName>
        <formula>Owner.ITA_Office__c</formula>
        <inlineHelpText>Primary ITA POC for this Organization&apos;s office.</inlineHelpText>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Trade_Style__c</fullName>
        <description>Primary Trade Style from D&amp;B</description>
        <formula>DandbCompany.TradeStyle1</formula>
        <label>Primary Trade Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Shield_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Shield Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Organization_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Users may select this to alert the data team to investigate the organization record for removal.</inlineHelpText>
        <label>Request Organization Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <description>Checkbox is checked when # of employees on record is &gt;1 and &lt;500 Old Formula: IF(MAX(DandbCompany.GlobalUltimateTotalEmployees, NumberOfEmployees, DandbCompany.EmployeesHere, DandbCompany.EmployeesTotal)&lt;501, TRUE, FALSE)</description>
        <formula>IF(MAX(DandbCompany.GlobalUltimateTotalEmployees, NumberOfEmployees, DandbCompany.EmployeesHere, DandbCompany.EmployeesTotal)&lt;501 &amp;&amp; BillingCountry = &apos;United States&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated based on Data.com, where there are less than 501 employees &amp; country = US, includes null values.</inlineHelpText>
        <label>SME (U.S. Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>Legacy SharePoint record ID</description>
        <label>SharePoint ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Org_Name__c</fullName>
        <description>Legacy SharePoint Organization Name</description>
        <label>Sharepoint Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTechnology__c</fullName>
        <label>Source Technology</label>
        <picklist>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__DUNS_Global_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Ultimate Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>All Child Accounts</relationshipLabel>
        <relationshipName>All_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Excluded_From_Account_Hierarchies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Default Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Global_Ultimate_Grouping_Id__c</fullName>
        <description>Field used by Traction Hierarchies for grouping by Global Ultimate Parent account in reports</description>
        <formula>if(!ISBLANK( TracHier__DUNS_Global_Ultimate_Parent__c), 
TracHier__DUNS_Global_Ultimate_Parent__r.Name &amp; &quot; (&quot; &amp; TracHier__DUNS_Global_Ultimate_Parent__r.DunsNumber &amp; &quot;)&quot; 
, 
Name &amp; &quot; (&quot; &amp; BLANKVALUE(DunsNumber, &quot;No D&amp;B Data Available&quot;) &amp; &quot;)&quot; 
)</formula>
        <inlineHelpText>Use this field to group records by Global Ultimate Parent account in reports</inlineHelpText>
        <label>Global Ultimate Grouping Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Owner__c</fullName>
        <description>The name of the Sales rep who owns the Account.</description>
        <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
        <inlineHelpText>The name of the Sales rep who owns the Account.</inlineHelpText>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direct Child Accounts</relationshipLabel>
        <relationshipName>Direct_Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>US_Tax_ID_from_Data_com__c</fullName>
        <description>This is the Tax ID field from D&amp;B company information, removed and populated here to provide FLS to prevent users from accessing the field. The D&amp;B C field is overwritten after copy.</description>
        <inlineHelpText>This is the Tax ID field from D&amp;B company information.</inlineHelpText>
        <label>US Tax ID from Data.com</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for data support team to use to recognize what is a new organization record that needs reviewed to ensure non-dupe or other issue. NOT viewable by ITA Users.</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unverified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Merged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Woman_Owned_Indicator__c</fullName>
        <description>Woman-Owned Indicator from Data.com</description>
        <formula>TEXT(DandbCompany.WomenOwned)</formula>
        <label>Woman-Owned Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMenu_ES_ID__c</fullName>
        <description>Legacy eMenu ES ID</description>
        <label>eMenu ES ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMenu_Org_Name__c</fullName>
        <description>Legacy eMenu Organization Name</description>
        <label>eMenu Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test_number__c</fullName>
        <label>test number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zipCodeLen__c</fullName>
        <formula>LEN(RIGHT( BillingPostalCode ,(LEN(BillingPostalCode)- FIND(&apos;-&apos;, BillingPostalCode))))+
LEN(LEFT(BillingPostalCode, FIND(&apos;-&apos;, BillingPostalCode )-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zipCodeLen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Office__c</columns>
        <columns>Industries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Organization_Removal__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>All_API_Partner_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Office__c</columns>
        <columns>Industries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner_Account</value>
        </filters>
        <label>All API Partner Organizations</label>
        <sharedTo>
            <group>SOD_Scrum_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Organization_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>MyAccountsNotCleaned</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Organization_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CLEAN_STATUS</field>
            <operation>equals</operation>
            <value>3,5,6,7</value>
        </filters>
        <label>My Organizations Not Cleaned</label>
    </listViews>
    <listViews>
        <fullName>Organization_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Organization_Removal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Organization Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>Request_For_Removal</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>TracHier__Owner__c</columns>
        <columns>Owner_Office__c</columns>
        <columns>Request_Organization_Removal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Organization_Removal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CLEAN_STATUS</field>
            <operation>equals</operation>
            <value>0,1,2,3,4,7</value>
        </filters>
        <label>Request For Removal Cleaned</label>
        <sharedTo>
            <group>Data_Admin_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ITA_User_Account_RT</fullName>
        <active>true</active>
        <label>ITA User Account RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>false</active>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account</fullName>
        <active>true</active>
        <description>Used for tracking Partner Accounts</description>
        <label>Partner Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>To_Be_Merged_must_have_org</fullName>
        <active>true</active>
        <description>To be merged when selected must have org in merged org when saved</description>
        <errorConditionFormula>ISPICKVAL( Verification_Status__c , &quot;To Be Merged&quot;)  &amp;&amp;
ISBLANK( Merged_Organization__c )</errorConditionFormula>
        <errorDisplayField>Verification_Status__c</errorDisplayField>
        <errorMessage>If you select Verification Status of To Be Merged, you must indicate the Merged Organization before it will save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Country_Exists</fullName>
        <active>true</active>
        <description>Verify Country has value populated.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;Data Team Admin&quot;, 
$Profile.Name &lt;&gt; &quot;Delegated Admin (Field)&quot;, 
$User.Id &lt;&gt; &quot;005r0000000EZ0K&quot;, 
$User.Alias &lt;&gt; &quot;autocln&quot;, 
ISBLANK(BillingCountry) 
)</errorConditionFormula>
        <errorMessage>You must enter a value for Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_removal_selected_cant_edit</fullName>
        <active>true</active>
        <description>Unless administrator, can not edit wins marked for removal.

AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;Data Team Admin&quot;,
$Profile.Name &lt;&gt; &quot;Delegated Admin (Field)&quot;, 
Request_Organization_Removal__c = TRUE 
)</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Data Team Admin&quot;,
$Profile.Name &lt;&gt; &quot;Help Desk Administration&quot;,
$Profile.Name &lt;&gt; &quot;Delegated Admin (Field)&quot;,
$User.Alias &lt;&gt; &quot;autocln&quot;,
PRIORVALUE(Request_Organization_Removal__c) &lt;&gt; FALSE
)</errorConditionFormula>
        <errorMessage>This Organization is requested to be removed.  If you believe this is in error, please contact the help desk immediately.</errorMessage>
    </validationRules>
</CustomObject>